<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/star_big_on" />

    <TextView
        android:id="@+id/textViewPregunta"
        android:layout_width="430dp"
        android:layout_height="14dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="396dp"
        android:layout_height="143dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_verdadero"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/texto_verdadero"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_falso"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_falso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="232dp"
            android:text="@string/texto_falso"
            app:backgroundTint="#3F8E42"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_verdadero" />

        <Button
            android:id="@+id/btnAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:text="@string/btnAnterior"
            app:layout_constraintEnd_toStartOf="@+id/btnSiguiente"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_verdadero" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="61dp"
            android:layout_marginRight="61dp"
            android:text="@string/btnsiguiente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAnterior"
            app:layout_constraintTop_toBottomOf="@+id/btn_falso" />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:text="@string/puntuacion"
            app:layout_constraintEnd_toStartOf="@+id/textPuntuacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAnterior" />

        <TextView
            android:id="@+id/textPuntuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textScore"
            app:layout_constraintTop_toBottomOf="@+id/btnSiguiente" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>